hphp/hack/test/typecheck/reified_generics/funciton_call_missing_reified_generics2.php.exp
File "funciton_call_missing_reified_generics2.php", line 11, characters 16-18:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
  File "hackarray.hhi", line 28, characters 22-24:
  Definition is here
File "funciton_call_missing_reified_generics2.php", line 12, characters 12-14:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
  File "hackarray.hhi", line 28, characters 22-24:
  Definition is here
File "funciton_call_missing_reified_generics2.php", line 13, characters 11-13:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
  File "hackarray.hhi", line 28, characters 22-24:
  Definition is here
